# architecture-documentation

./: .env.example  LICENSE  Makefile  README.md  gen_nav.py  mkdocs.yml  package-lock.json  package.json  pyproject.toml
docs/: index.md
docs/01_introduction_and_goals/: index.md
docs/02_architecture_constraints/: index.md
docs/03_system_scope_and_context/: index.md
docs/04_solution_strategy/: index.md
docs/05_building_block_view/: index.md
docs/06_runtime_view/: index.md
docs/07_deployment_view/: index.md
docs/08_cross_cutting_concepts/: index.md
docs/09_architectural_decisions/: index.md
docs/10_quality_requirements/: index.md
docs/11_risks_and_technical_debt/: index.md
docs/12_glossary/: index.md
