[tool.poetry]
name = "architecture-docs"
version = "0.1.0"
description = "Architecture documentation with Confluence export and MkDocs Material"
authors = ["Gjergj Sheldija"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
confluence-markdown-exporter = "==3.2.0"
mkdocs-material = "==9.7.3"
pydantic = "==2.12.5"
pydantic-settings = "==2.13.1"
requests = "==2.32.5"
beautifulsoup4 = "==4.14.3"
lxml = "==6.0.2"
tabulate = "==0.9.0"
tqdm = "==4.67.3"
typer = "==0.24.1"
rich = "==14.3.3"
python-dotenv = "==1.2.1"
mkdocs-mermaid2-plugin = "^1.2.3"
mkdocs-with-pdf = "^0.9.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
